fix notices not showing in wp < 5.7

--- a/src/templates/admin.scss
+++ b/src/templates/admin.scss
@@ -6,7 +6,7 @@
 // settings page
  .custom-welcome-guide-admin-notices {
     .components-snackbar {
-        background-color: var(--wp-admin-theme-color-darker-10);
+        background-color: rgb(0, 112, 167);
     }
     .dashicons-smiley::before {
         position: relative;
